_azure/_aks_artifacts/calico/namespaceRule/policy/allow_cross_ns_pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-backend-noside
  namespace: ap
spec:
  podSelector:
    matchLabels:
      app: frontendpod
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          location : nsapp2
      podSelector:
        matchLabels:
          app: backendpod
          group: application
